modified:   16. Linear Data Structures/Built-In Classes/The ArrayList Class.ipynb

--- a/16. Linear Data Structures/Built-In Classes/The ArrayList Class.ipynb
+++ b/16. Linear Data Structures/Built-In Classes/The ArrayList Class.ipynb
@@ -58,7 +58,9 @@
     }
    },
    "source": [
-    "However, a very important distinction to consider regarding the `ArrayList` class is that, although it is also **based on a dynamically extensible array**, it does **not enforce a uniform data type**. This enables us to **hold heterogeneous collections of objects** within a single instance of the class."
+    "However, a very important distinction to consider regarding the `ArrayList` class is that, although it is also **based on a dynamically extensible array**, it does **not enforce a uniform data type**. This enables us to **hold heterogeneous collections of objects** within a single instance of the class.   \n",
+    "\n",
+    "Despite the immeadiate convenience this provides, the `ArrayList` **does not offer the best perfomrance**, and , as such, alternative structures should be used for modern development projects. "
    ]
   },
   {
@@ -88,7 +90,7 @@
     }
    },
    "source": [
-    "### Constructors"
+    "### Class Definition"
    ]
   },
   {
@@ -103,68 +105,7 @@
     }
    },
    "source": [
-    "<table class=\"nameValue table table-sm table-stacked-mobile\" aria-label=\"Table 1\">\n",
-    "        \t<tbody><tr>\n",
-    "\t  <td class=\"is-one-third-width-tablet\">\n",
-    "\t<span class=\"break-text\">\n",
-    "\t\t<a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.arraylist.-ctor?view=net-7.0#system-collections-arraylist-ctor\" data-linktype=\"relative-path\">Array<wbr>List()</a>\n",
-    "\t</span>\n",
-    "</td>\n",
-    "\t<td class=\"summary\"> \n",
-    "\t\t<p>Initializes a new instance of the <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.arraylist?view=net-7.0\" data-linktype=\"relative-path\">ArrayList</a> class that is empty and has the default initial capacity.</p>\n",
-    "\t</td>\n",
-    "        \t</tr>\n",
-    "        \t<tr>\n",
-    "\t  <td class=\"is-one-third-width-tablet\">\n",
-    "\t<span class=\"break-text\">\n",
-    "\t\t<a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.arraylist.-ctor?view=net-7.0#system-collections-arraylist-ctor(system-collections-icollection)\" data-linktype=\"relative-path\">Array<wbr>List(ICollection)</a>\n",
-    "\t</span>\n",
-    "</td>\n",
-    "\t<td class=\"summary\"> \n",
-    "\t\t<p>Initializes a new instance of the <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.arraylist?view=net-7.0\" data-linktype=\"relative-path\">ArrayList</a> class that contains elements copied from the specified collection and that has the same initial capacity as the number of elements copied.</p>\n",
-    "\t</td>\n",
-    "        \t</tr>\n",
-    "        \t<tr>\n",
-    "\t  <td class=\"is-one-third-width-tablet\">\n",
-    "\t<span class=\"break-text\">\n",
-    "\t\t<a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.arraylist.-ctor?view=net-7.0#system-collections-arraylist-ctor(system-int32)\" data-linktype=\"relative-path\">Array<wbr>List(Int32)</a>\n",
-    "\t</span>\n",
-    "</td>\n",
-    "\t<td class=\"summary\"> \n",
-    "\t\t<p>Initializes a new instance of the <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.arraylist?view=net-7.0\" data-linktype=\"relative-path\">ArrayList</a> class that is empty and has the specified initial capacity.</p>\n",
-    "\t</td>\n",
-    "        \t</tr>\n",
-    "\t</tbody></table>"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "<br>"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "### Properties"
+    "#### Properties"
    ]
   },
   {
@@ -280,7 +221,83 @@
     }
    },
    "source": [
-    "### Methods"
+    "#### Constructors"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<table class=\"nameValue table table-sm table-stacked-mobile\" aria-label=\"Table 1\">\n",
+    "        \t<tbody><tr>\n",
+    "\t  <td class=\"is-one-third-width-tablet\">\n",
+    "\t<span class=\"break-text\">\n",
+    "\t\t<a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.arraylist.-ctor?view=net-7.0#system-collections-arraylist-ctor\" data-linktype=\"relative-path\">Array<wbr>List()</a>\n",
+    "\t</span>\n",
+    "</td>\n",
+    "\t<td class=\"summary\"> \n",
+    "\t\t<p>Initializes a new instance of the <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.arraylist?view=net-7.0\" data-linktype=\"relative-path\">ArrayList</a> class that is empty and has the default initial capacity.</p>\n",
+    "\t</td>\n",
+    "        \t</tr>\n",
+    "        \t<tr>\n",
+    "\t  <td class=\"is-one-third-width-tablet\">\n",
+    "\t<span class=\"break-text\">\n",
+    "\t\t<a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.arraylist.-ctor?view=net-7.0#system-collections-arraylist-ctor(system-collections-icollection)\" data-linktype=\"relative-path\">Array<wbr>List(ICollection)</a>\n",
+    "\t</span>\n",
+    "</td>\n",
+    "\t<td class=\"summary\"> \n",
+    "\t\t<p>Initializes a new instance of the <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.arraylist?view=net-7.0\" data-linktype=\"relative-path\">ArrayList</a> class that contains elements copied from the specified collection and that has the same initial capacity as the number of elements copied.</p>\n",
+    "\t</td>\n",
+    "        \t</tr>\n",
+    "        \t<tr>\n",
+    "\t  <td class=\"is-one-third-width-tablet\">\n",
+    "\t<span class=\"break-text\">\n",
+    "\t\t<a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.arraylist.-ctor?view=net-7.0#system-collections-arraylist-ctor(system-int32)\" data-linktype=\"relative-path\">Array<wbr>List(Int32)</a>\n",
+    "\t</span>\n",
+    "</td>\n",
+    "\t<td class=\"summary\"> \n",
+    "\t\t<p>Initializes a new instance of the <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.arraylist?view=net-7.0\" data-linktype=\"relative-path\">ArrayList</a> class that is empty and has the specified initial capacity.</p>\n",
+    "\t</td>\n",
+    "        \t</tr>\n",
+    "\t</tbody></table>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Methods"
    ]
   },
   {
@@ -772,6 +789,36 @@
     "\t</td>\n",
     "        \t</tr>\n",
     "\t</tbody></table>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Instantiation and Example Usage"
    ]
   }
  ],
