modified:   16. Linear Data Structures/Built-In Classes/The ArrayList Class.ipynb

--- a/16. Linear Data Structures/Built-In Classes/The ArrayList Class.ipynb
+++ b/16. Linear Data Structures/Built-In Classes/The ArrayList Class.ipynb
@@ -1124,7 +1124,9 @@
     }
    },
    "source": [
-    "If we need to process a collection of hetergenous values stored in an `ArrayList`, one wat to do so is by using the `dynamic` keyword. In $C\\#$, `dynamic` is a **universal data type intended to hold any value** (numbers, objects, strings, even functions and methods). Operations over `dynamic` variables are **resolved at runtime** and their action depends on the actuals values of their arguments."
+    "If we need to process a collection of hetergenous values stored in an `ArrayList`, one way to do so is by using the `dynamic` keyword. \n",
+    "   \n",
+    "In $C\\#$, `dynamic` is a **universal data type intended to hold any value** (numbers, objects, strings, even functions and methods). Operations over `dynamic` variables are **resolved at runtime** and their action depends on the actuals values of their arguments."
    ]
   },
   {
