--- a/16. Linear Data Structures/Built-In Classes/The ArrayList Class.ipynb
+++ b/16. Linear Data Structures/Built-In Classes/The ArrayList Class.ipynb
@@ -1212,7 +1212,7 @@
     }
    },
    "source": [
-    "Above, we see the result of taking the `sum` of each `untypedList` element simply concatenates them together."
+    "Above, we see the result of taking the `sum` of each `untypedList` element simply concatenates them together.....which, in retrospect, is not particulary useful."
    ]
   },
   {
@@ -1351,7 +1351,7 @@
     }
    },
    "source": [
-    "We can now demostrate how the `ArrayList` can also be used to conveniently Add a homogenious collection without the use of a loop: "
+    "We can now demostrate how the `ArrayList` can also be used to conveniently Add a homogeneous collection without the use of a loop: "
    ]
   },
   {
