modified:   16. Linear Data Structures/Built-In Classes/The Generic List Class.ipynb

--- a/16. Linear Data Structures/Built-In Classes/The Generic List Class.ipynb
+++ b/16. Linear Data Structures/Built-In Classes/The Generic List Class.ipynb
@@ -1807,7 +1807,11 @@
     }
    },
    "source": [
-    "Now our list is getting a little long. Let's say we wanted to Remove All the even numbered values. Using a defined boolean evaluation method, also known a **Predicate**, we can do just that:"
+    "Now our list is getting a little long. \n",
+    "    \n",
+    "Let's say we wanted to Remove All the even numbered values. \n",
+    "    \n",
+    "Using a defined boolean evaluation method, also known a **Predicate**, we can do just that:"
    ]
   },
   {
