--- a/16. Linear Data Structures/Built-In Classes/The Generic List Class.ipynb
+++ b/16. Linear Data Structures/Built-In Classes/The Generic List Class.ipynb
@@ -2233,7 +2233,9 @@
     }
    },
    "source": [
-    "Another interesting feature of the `List<T>` class is the ability to perform a specified Action For Each element, which may take a predefined method as an argument, or an anonymous `delegate` method. In either approach, however, the method must be `void`:"
+    "Another interesting feature of the `List<T>` class is the ability to perform a specified Action For Each element, which may take a predefined method as an argument, or an anonymous `delegate` method, without using a loop. \n",
+    "   \n",
+    "In either approach, however, the method must be `void`:"
    ]
   },
   {
