modified:   16. Linear Data Structures/Built-In Classes/The Generic List Class.ipynb

--- a/16. Linear Data Structures/Built-In Classes/The Generic List Class.ipynb
+++ b/16. Linear Data Structures/Built-In Classes/The Generic List Class.ipynb
@@ -93,6 +93,39 @@
     }
    },
    "source": [
+    "- The **search by index is very fast** – we can access with equal speed each of the elements, regardless of the count of elements.\n",
+    "- The **search for an element by value** works with as many comparisons as the count of elements (in the worst case), i.e. it is **slow**.\n",
+    "- **Inserting** and **removing elements** is a **slow** operation – when we add or remove elements, especially if they are not in the end of the array, we have to shift the rest of the elements and this is a slow operation.\n",
+    "- When **adding a new element to the end**, sometimes we have to increase the capacity of the array, which is a slow operation, but it happens seldom and the average speed of insertion to List does not depend on the count of elements, i.e. it works very **fast**."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "As such, use `List<T>` when you **don’t expect frequent insertion and deletion** of elements, but you expect to **add new elements at the end** of the list or to **access the elements by index**."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "<br>"
    ]
   },
